website/tests/snapshots/react/types.exp
=== block 1 ===
Error --------------------------------------------------------------------------------- -:5:1

Cannot cast `1` to `MixedElement` because number [1] is incompatible with `ExactReactElement_DEPRECATED` [2].
[incompatible-type]

   -:5:1
   5| 1 as React.MixedElement; // Error
      ^ [1]

References:
   -:5:6
   5| 1 as React.MixedElement; // Error
           ^^^^^^^^^^^^^^^^^^ [2]


Found 1 error

=== block 2 ===
Error --------------------------------------------------------------------------------- -:5:1

Cannot cast `1` to `MixedElement` because number [1] is incompatible with `ExactReactElement_DEPRECATED` [2].
[incompatible-type]

   -:5:1
   5| 1 as React.MixedElement; // Error
      ^ [1]

References:
   -:5:6
   5| 1 as React.MixedElement; // Error
           ^^^^^^^^^^^^^^^^^^ [2]


Found 1 error

=== block 3 ===
No errors!

=== block 4 ===
No errors!

=== block 5 ===
No errors!
